html básicos para demo, no interfaz trabajada

--- a/templates/indexFull.html
+++ b/templates/indexFull.html
@@ -275,7 +275,7 @@
                 <a href="" class="navbar-brand">
                     <h1 class="text-primary"><span class="text-white">Dove</span>Coin</h1>
                 </a>
-                <p>A project created by Paloma Pérez from Madrid to understand how blockchain works.</p>
+                <p>A project created by Paloma Pérez de Madrid to understand how blockchain works.</p>
                 <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Contact me</h6>
                 <div class="d-flex justify-content-start">
                     <a class="btn btn-outline-primary btn-square mr-2" href="https://github.com/PPerezdeMadrid/dovecoin"><i class="fab fa-github"></i></a>
