--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9768,3 +9768,25 @@ h6,
   padding: 0;
   list-style-type: none;
 }
+
+.information{
+  padding: 2% 2%;
+  margin: 2% 2%;
+}
+.doveBlock {
+  border: 2px solid gray; 
+  padding: 1% 1%;
+  margin: 2%;
+}
+
+.doveBlock p {
+  margin: 0; 
+  padding: 10px 0; 
+  border-bottom: 1px solid gray; 
+}
+
+.blockComplete{
+  display:block;
+  padding: 0% 2%;
+  margin-bottom: 10%;
+}
