--- a/templates/getChain.html
+++ b/templates/getChain.html
@@ -10,36 +10,42 @@
             <div class="section-title mb-5">
                 <h5 class="text-primary text-uppercase mb-3">Let's see the chain</h5>
             </div>
-            <div class="row">
+            <div class="information">
                 <h1>Blockchain Data</h1>
                 <p><strong>Chain Length:</strong> {{ data.length }}</p>
-
+                
                 <h2>Blocks:</h2>
-                <ul>
-                    {% for block in data.chain %}
-                        <li>
-                            <h3>Block {{ block.index }}</h3>
-                            <p><strong>Timestamp:</strong> {{ block.timestamp }}</p>
-                            <p><strong>Proof of Work:</strong> {{ block.proof }}</p>
-                            <p><strong>Previous Hash:</strong> {{ block.previous_hash }}</p>
-                            
-                            <h4>Transactions:</h4>
-                            <ul>
-                                {% if block.transactions %}
-                                    {% for transaction in block.transactions %}
-                                        <li>
-                                            <strong>From:</strong> {{ transaction.sender }}<br>
-                                            <strong>To:</strong> {{ transaction.recipient }}<br>
-                                            <strong>Amount:</strong> {{ transaction.amount }}
-                                        </li>
-                                    {% endfor %}
-                                {% else %}
-                                    <li>No transactions in this block</li>
-                                {% endif %}
-                            </ul>
-                        </li>
-                    {% endfor %}
-                </ul>
+                <div class="blockComplete">
+                    <ul>
+                        {% for block in data.chain %}
+                            <li>
+                                <h3>Block {{ block.index }}</h3>
+                                <div class="doveBlock">
+                                    <p><strong>Timestamp:</strong> {{ block.timestamp }}</p>
+                                    <p><strong>Proof of Work:</strong> {{ block.proof }}</p>
+                                    <p><strong>Previous Hash:</strong> {{ block.previous_hash }}</p>
+                                </div>
+                                <h5>Transactions:</h5>
+                                <ul>
+                                    {% if block.transactions %}
+                                        {% for transaction in block.transactions %}
+                                            <li>
+                                                <strong>From:</strong> {{ transaction.sender }}<br>
+                                                <strong>To:</strong> {{ transaction.recipient }}<br>
+                                                <strong>Amount:</strong> {{ transaction.amount }}
+                                            </li>
+                                        {% endfor %}
+                                    {% else %}
+                                        <li>No transactions in this block</li>
+                                    {% endif %}
+                                </ul>
+                        
+                            </li>
+                        
+                        {% endfor %}
+                    </ul>
+                </div>
+            
             </div>
         </div>
     </div>
