--- a/templates/addTransaction.html
+++ b/templates/addTransaction.html
@@ -7,8 +7,8 @@
 <div class="container py-5">
     <div class="row mb-5">
         <div class="col-lg-12">
-            <div class="section-title mb-5">
-                <h5 class="text-primary text-uppercase mb-3">Let's make a Transaction</h5>
+            <div class="section-title mb-5" >
+                <h5 class="text-primary text-uppercase mb-3" style="justify-content: center;">Let's make a Transaction</h5>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-5 ">
