--- a/templates/template.html
+++ b/templates/template.html
@@ -86,7 +86,7 @@
                         <a href="{{ url_for('get_chain') }}"  class="nav-item nav-link">See Nodes</a>
                         <a href="{{ url_for('go_transaction') }}" class="nav-item nav-link">Transactions</a>
                         <a href="{{ url_for('mine_block') }}"  class="nav-item nav-link">Mine a Block</a>
-                        <a href="{{ url_for('contact') }}"  class="nav-item nav-link">Contact</a>
+                        <a href="{{ url_for('go_contact') }}"  class="nav-item nav-link">Contact</a>
                     </div>
                 </div>
             </nav>
