--- a/templates/template.html
+++ b/templates/template.html
@@ -106,44 +106,8 @@
     </div>
     <!-- Navbar End -->
 
-    <!-- Carousel Start -->
-    <div class="container-fluid p-0">
-        <div id="header-carousel" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="w-100" src="../static/img/pannelDoveCoin.jpg" alt="Image">
-                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 700px;">
-                            <h4 class="text-white text-uppercase mb-md-3">BlockChain Technology</h4>
-                            <h1 class="display-3 text-white mb-md-5"> Let's buy a DoveCoin</h1>
-                            <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">DoveCoin MarketPlace</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="w-100" src="../static/img/panelDoveCoin2.png" alt="Image">
-                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 600px;">
-                            <h4 class="text-white text-uppercase mb-md-3">BlockChain Technology</h4>
-                            <h1 class="display-3 text-white mb-md-4">Discover the code of DoveCoin</h1>
-                            <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Discover now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#header-carousel" data-slide="prev">
-                <div class="btn btn-dark" style="width: 45px; height: 45px;">
-                    <span class="carousel-control-prev-icon mb-n2"></span>
-                </div>
-            </a>
-            <a class="carousel-control-next" href="#header-carousel" data-slide="next">
-                <div class="btn btn-dark" style="width: 45px; height: 45px;">
-                    <span class="carousel-control-next-icon mb-n2"></span>
-                </div>
-            </a>
-        </div>
-    </div>
-    <!-- Carousel End -->
+    {% block carrousel %}
+    {% endblock %}
 
     {% block service %}
     {% endblock %}
