--- a/templates/profile.html
+++ b/templates/profile.html
@@ -24,3 +24,48 @@
 </div>
 {% endblock %}
 
+{% block how_it_works %}
+<div class="container mt-5">
+    <button id="mineBlockButton" class="btn btn-primary">Mine a Block</button>
+    <div id="blockInfo" class="mt-3">
+
+    </div>
+    <script>
+    document.getElementById('mineBlockButton').addEventListener('click', function() {
+        fetch('/mine_block_ajax')
+            .then(response => response.json())
+            .then(data => {
+                // Verificamos que la respuesta sea exitosa
+                if (data.message) {
+                    const blockInfoDiv = document.getElementById('blockInfo');
+                    blockInfoDiv.innerHTML = `
+                        <div class="alert alert-success">
+                            <h5 class="text-primary">You have just Mined a Block!</h5>
+                            <p><strong>Block Index:</strong> ${data.index}</p>
+                            <p><strong>Timestamp:</strong> ${data.timestamp}</p>
+                            <p><strong>Nonce:</strong> ${data.proof}</p>
+                            <p><strong>Previous Block Hash:</strong> ${data.previous_hash}</p>
+                            <h6 class="mt-3">Transactions:</h6>
+                            <ul class="list-group">
+                                ${data.transactions.map(transaction => `
+                                    <li class="list-group-item">
+                                        <strong>From:</strong> ${transaction.sender}<br>
+                                        <strong>To:</strong> ${transaction.receiver}<br>
+                                        <strong>Amount:</strong> ${transaction.amount}
+                                    </li>
+                                `).join('')}
+                            </ul>
+                            <img src="../static/img/congrats.jpg" alt="Congratulations" class="img-fluid mt-3">
+                        </div>
+                    `;
+                }
+            })
+            .catch(error => {
+                console.error('Error fetching block data:', error);
+            });
+    });
+    </script>
+</div>
+
+{% endblock %}
+
