--- a/templates/profile.html
+++ b/templates/profile.html
@@ -25,6 +25,8 @@
 {% endblock %}
 
 {% block how_it_works %}
+
+<!-- Mine Block Start -->
 <div class="container mt-5">
     <button id="mineBlockButton" class="btn btn-primary">Mine a Block</button>
     <div id="blockInfo" class="mt-3">
@@ -66,6 +68,67 @@
     });
     </script>
 </div>
+<!-- Mine Block End -->
 
+<!-- Add Transaction Start -->
+<div class="container py-5">
+    <div class="row mb-5">
+        <div class="col-lg-12">
+            <div class="section-title mb-5">
+                <h5 class="text-primary text-uppercase mb-3" style="justify-content: center;">Let's make a Transaction</h5>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-5">
+                    <div class="contact-form bg-white" style="padding: 5%;">
+                        <h2>Add Transaction</h2>
+                        <form id="transaction-form">
+                            <label for="sender">Sender:</label><br>
+                            <input type="text" id="sender" name="sender" required><br><br>
+
+                            <label for="receiver">Receiver:</label><br>
+                            <input type="text" id="receiver" name="receiver" required><br><br>
+
+                            <label for="amount">Amount:</label><br>
+                            <input type="number" id="amount" name="amount" required><br><br>
+
+                            <div class="text-center">
+                                <button class="btn btn-primary py-3 px-4" type="submit">Submit</button>
+                            </div>
+                        </form>
+                        <div id="response-message"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    document.getElementById('transaction-form').addEventListener('submit', function(event) {
+        event.preventDefault(); // Evitar el envío del formulario tradicional
+
+        const formData = new FormData(this);
+
+        fetch('/add_transaction', {
+            method: 'POST',
+            body: formData,
+        })
+        .then(response => {
+            if (!response.ok) {
+                throw new Error('Network response was not ok');
+            }
+            return response.json();
+        })
+        .then(data => {
+            // Mostrar el mensaje en la página
+            document.getElementById('response-message').innerHTML = `<h2>${data.message}</h2>`;
+        })
+        .catch(error => {
+            console.error('There was a problem with the fetch operation:', error);
+        });
+    });
+</script>
+
+<!-- Add Transaction Start -->
 {% endblock %}
 
