--- a/templates/profile.html
+++ b/templates/profile.html
@@ -71,7 +71,7 @@
 <!-- Mine Block End -->
 
 <!-- Add Transaction Start -->
-<div class="container py-5">
+<div class="container mt-5">
     <div class="row mb-5">
         <div class="col-lg-12">
             <div class="section-title mb-5">
