--- a/templates/template.html
+++ b/templates/template.html
@@ -95,9 +95,11 @@
                     <div class="navbar-nav ml-auto py-0">
                         <a href="{{ url_for('home') }}" class="nav-item nav-link active">Home</a>
                         <a href="{{ url_for('get_chain') }}"  class="nav-item nav-link">See Nodes</a>
-                        <a href="{{ url_for('go_transaction') }}" class="nav-item nav-link">Transactions</a>
                         <a href="{{ url_for('go_blog') }}"  class="nav-item nav-link">Blog</a>
                         <a href="{{ url_for('go_contact') }}"  class="nav-item nav-link">Contact</a>
+                        <a href="{{ url_for('go_register') }}" class="nav-item nav-link">
+                            <i class="fas fa-user"></i> Log In
+                        </a>
                     </div>
                 </div>
             </nav>
