--- a/templates/register.html
+++ b/templates/register.html
@@ -110,9 +110,12 @@
 
 
 {% block how_it_works %}
-<!-- How It Works Start -->
+<!-- Admin Start -->
+<div class="container-fluid py-5" id="newFormContainer">
+    <button href="{{ url_for('admin') }}">Admin</a>
+</div>
 
-<!-- How It Works End -->
+<!-- Admin End -->
 {% endblock %}
 
 
