--- a/templates/register.html
+++ b/templates/register.html
@@ -112,7 +112,7 @@
 {% block how_it_works %}
 <!-- Admin Start -->
 <div class="container-fluid py-5" id="newFormContainer">
-    <button href="{{ url_for('admin') }}">Admin</a>
+    <a href="{{ url_for('admin') }}" class="btn btn-secondary mt-3">Administrar Usuarios</a>
 </div>
 
 <!-- Admin End -->
