--- a/src/templates/Admin.html
+++ b/src/templates/Admin.html
@@ -102,7 +102,7 @@ $(document).ready(function() {
 </script>
 
 <div class="container mt-5">
-    <a href="{{ url_for('logout') }}" class="btn btn-success btn-lg">Log Out</a>  
+    <a href="{{ url_for('logout') }}" class="btn btn-secundary btn-danger">Log Out</a>  
 </div>
 
 {% endblock %}
