--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -41,7 +41,7 @@
                 if (data.message) {
                     const blockInfoDiv = document.getElementById('blockInfo');
                     blockInfoDiv.innerHTML = `
-                        <div class="alert alert-success">
+                        <div class="alert alert-success" style="word-wrap: break-word;">
                             <h5 class="text-primary">You have just Mined a Block!</h5>
                             <p><strong>Block Index:</strong> ${data.index}</p>
                             <p><strong>Timestamp:</strong> ${data.timestamp}</p>
